fixed dark mode so it doesnt hide text

--- a/assets/css/activities.css
+++ b/assets/css/activities.css
@@ -16,6 +16,7 @@
 .card {
     min-width: 29%;
     border: 0 !important;
+    background-color: #db4646;
     -webkit-box-shadow: 0 16px 32px rgba(100, 27, 27, 0.1);
     box-shadow: 0 16px 32px rgba(100, 27, 27, 0.1);
 }
